# gpr200-fa2023-Jake-Sanderson

./: CMakeLists.txt
assignments/assignment1_helloTriangle/: main.cpp
assignments/assignment2_sunset/: main.cpp
assignments/assignment2_sunset/assets/: fragmentShader.frag
assignments/assignment3_textures/: main.cpp
assignments/assignment3_textures/assets/: background.frag  character.frag  character.vert  fragmentShader.frag
assignments/assignment4_transformations/: main.cpp
assignments/assignment4_transformations/assets/: vertexShader.vert
assignments/assignment5_camera/: main.cpp
assignments/assignment6_proceduralGeometry/: main.cpp
assignments/assignment7_lighting/: main.cpp
assignments/assignment7_lighting/assets/: defaultLit.frag  defaultLit.vert
assignments/terrainTesting/: CMakeLists.txt  main.cpp
assignments/terrainTesting/assets/: fragmentShader.frag  vertexShader.vert
core/JSLib/: camera.cpp  camera.h  procGen.cpp  procGen.h  shader.cpp  shader.h  terrain.cpp  terrain.h  texture.cpp  transformation.h
